Fix slider sticking out

--- a/app/src/component/style/Settings.scss
+++ b/app/src/component/style/Settings.scss
@@ -83,4 +83,5 @@
 .Settings-volume-slider {
 	width: 40%;
 	padding-bottom: 1.5em;
+	padding-right: 0.5em;
 }
